# TheFlower

./: CMakeLists.txt  Doxyfile  README.md
benchmark/: CMakeLists.txt  Serializer.cpp
dependencies/SFML-2.6.0/: CMakeLists.txt  changelog.md
dependencies/SFML-2.6.0/cmake/: SFMLConfig.cmake.in  SFMLConfigDependencies.cmake.in
dependencies/SFML-2.6.0/doc/: doxyfile.in
dependencies/SFML-2.6.0/examples/cocoa/: MainMenu.xib
dependencies/SFML-2.6.0/extlibs/headers/FLAC/: stream_decoder.h  stream_encoder.h
dependencies/SFML-2.6.0/extlibs/headers/freetype2/: freetype.h
dependencies/SFML-2.6.0/extlibs/headers/minimp3/: minimp3.h
dependencies/SFML-2.6.0/extlibs/headers/stb_image/: stb_image.h  stb_image_write.h
dependencies/SFML-2.6.0/extlibs/headers/vorbis/: vorbisenc.h
dependencies/SFML-2.6.0/include/SFML/: Window.hpp
dependencies/SFML-2.6.0/include/SFML/Graphics/: CircleShape.hpp  ConvexShape.hpp  Drawable.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp
dependencies/SFML-2.6.0/include/SFML/Window/: Clipboard.hpp  Context.hpp  ContextSettings.hpp  Cursor.hpp  Event.hpp  GlResource.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  Touch.hpp  VideoMode.hpp  Vulkan.hpp  Window.hpp  WindowBase.hpp  WindowHandle.hpp  WindowStyle.hpp
dependencies/SFML-2.6.0/src/SFML/: CMakeLists.txt
dependencies/SFML-2.6.0/tools/pkg-config/: sfml-all.pc.in  sfml-graphics.pc.in  sfml-window.pc.in
dependencies/boost_1_80_0/libs/beast/: CHANGELOG.md
dependencies/boost_1_80_0/more/getting_started/: windows.html  windows.rst
dependencies/google-benchmark/: CMakeLists.txt
dependencies/google-benchmark/cmake/: GoogleTest.cmake.in
dependencies/googletest/src/: gtest.cc
docs/html/: _animation_8h_source.html  _button_8h_source.html  _canvas_8h_source.html  _defeat_game_state_8h_source.html  _flower_8h_source.html  _flower_config_8h_source.html  _flower_pool_8h_source.html  _game_process_game_state_8h_source.html  _game_state_base_8h_source.html  _main_menu_game_state_8h_source.html  _map_8h_source.html  _player_8h_source.html  _program_8h_source.html  _scene_object_8h_source.html  _serializer_8h_source.html  _snake_8h_source.html  _snake_config_8h_source.html  _snake_pool_8h_source.html  _u_math_8h_source.html  _widget_8h_source.html  annotated.html  class_animation-members.html  class_animation.html  class_button-members.html  class_button.html  class_canvas-members.html  class_canvas.html  class_defeat_game_state-members.html  class_defeat_game_state.html  class_flower-members.html  class_flower.html  class_flower_pool-members.html  class_flower_pool.html  class_game_process_game_state-members.html  class_game_process_game_state.html  class_game_state_base-members.html  class_game_state_base.html  class_main_menu_game_state-members.html  class_main_menu_game_state.html  class_map-members.html  (+97 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  functions_0.js  functions_1.js  functions_10.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+22 more)
docs/latex/: _animation_8h_source.tex  _button_8h_source.tex  _canvas_8h_source.tex  _defeat_game_state_8h_source.tex  _flower_8h_source.tex  _flower_config_8h_source.tex  _flower_pool_8h_source.tex  _game_process_game_state_8h_source.tex  _game_state_base_8h_source.tex  _main_menu_game_state_8h_source.tex  _map_8h_source.tex  _player_8h_source.tex  _program_8h_source.tex  _scene_object_8h_source.tex  _serializer_8h_source.tex  _snake_8h_source.tex  _snake_config_8h_source.tex  _snake_pool_8h_source.tex  _u_math_8h_source.tex  _widget_8h_source.tex  annotated.tex  class_animation.tex  class_button.eps  class_button.tex  class_canvas.eps  class_canvas.tex  class_defeat_game_state.eps  class_defeat_game_state.tex  class_flower.eps  class_flower.tex  class_flower_pool.eps  class_flower_pool.tex  class_game_process_game_state.eps  class_game_process_game_state.tex  class_game_state_base.eps  class_game_state_base.tex  class_main_menu_game_state.eps  class_main_menu_game_state.tex  class_map.eps  class_map.tex  (+66 more)
flower/core/: CMakeLists.txt
flower/core/headers/: Button.h  Canvas.h  DefeatGameState.h  GameProcessGameState.h  GameStateBase.h  MainMenuGameState.h  SceneObject.h  Widget.h
flower/core/sources/: Button.cpp  DefeatGameState.cpp  GameProcessGameState.cpp  GameStateBase.cpp  MainMenuGameState.cpp  SceneObject.cpp
flower/flower/: CMakeLists.txt
flower/flower/headers/: Flower.h  FlowerConfig.h  FlowerPool.h
flower/flower/sources/: Flower.cpp  FlowerConfig.cpp  FlowerPool.cpp
flower/map/: CMakeLists.txt
flower/map/headers/: Map.h
flower/map/sources/: Map.cpp
flower/player/: CMakeLists.txt
flower/player/headers/: Player.h
flower/player/sources/: Player.cpp
flower/program/: CMakeLists.txt
flower/program/headers/: Program.h
flower/program/sources/: Program.cpp  main.cpp
flower/snake/: CMakeLists.txt
flower/snake/headers/: Snake.h  SnakeConfig.h  SnakePool.h
flower/snake/sources/: Snake.cpp  SnakeConfig.cpp  SnakePool.cpp
flower/ui/: CMakeLists.txt
flower/ui/headers/: Animation.h  Canvas.h  Widget.h
flower/ui/sources/: Animation.cpp  Button.cpp  Canvas.cpp  Widget.cpp
flower/utils/: CMakeLists.txt
flower/utils/headers/: Serializer.h  UMath.h
flower/utils/sources/: Serializer.cpp  UMath.cpp
save/: FlowerConfig.json  FlowerPool.json  General.json  Player.json  SnakeConfig.json  SnakePool.json
tests/: CMakeLists.txt  Serializer.cpp  main.cpp
(+298 files in other folders)
